--- a/kaboomcraze.css
+++ b/kaboomcraze.css
@@ -3,57 +3,166 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10px;
     background-color: var(--bg-color);
-    width: 100%;
-    height: 100%;
+    width: fit-content;
+    height: fit-content;
     box-sizing: border-box;
     overflow: auto; /* Ajouté pour permettre le défilement si nécessaire */
 }
 
 #minefield {
     display: grid;
-    grid-template-columns: repeat(10, 40px); /* Make cell size fixed */
-    grid-template-rows: repeat(10, 40px); /* Make cell size fixed */
-    width: fit-content; /* Ajouté pour ajuster la largeur à la taille du contenu */
-    height: fit-content; /* Ajouté pour ajuster la hauteur à la taille du contenu */
+    grid-template-columns: repeat(10, 1fr); 
+    grid-template-rows: repeat(10, 1fr); 
+    width: fit-content; 
+    height: fit-content; 
+    gap: calc(2 * var(--vps));
+    margin: var(--vps) var(--vps) var(--vps) var(--vps);
+    padding: var(--vps);
+    border: calc(0.5 * var(--vps)) solid var(--bg-color-hover);
 }
 
 .minefield-cell {
-    border: 1px solid  var(--border-color-int);
+    background-color: var(--bg-color);
+    box-shadow: 
+    calc(-0.5 * var(--vps)) calc(-0.5 * var(--vps)) 0 calc(0.5 * var(--vps)) var(--highlight),
+    calc(0.5 * var(--vps)) calc(0.5 * var(--vps)) 0 calc(0.5 * var(--vps)) var(--shadow),
+    0 0 0 calc(1 * var(--vps)) var(--bg-color); 
     text-align: center;
-    font-size: 40px;
-    color: #000;
+    font-size: var(--font-size-large);
     cursor: none;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0;
-    width: 40px;
-    height: 40px;
-    background-color: #FFF;
+    width: calc(5 * var(--vps));
+    height: calc(5 * var(--vps));
+
 }
+
+.minefield-cell:hover {
+    background-color: var(--bg-color-hover); /* Couleur de fond légèrement plus foncée lors du survol */
+}
+
+.minefield-cell.revealed {
+    outline: calc(0.5 * var(--vps)) solid var(--bg-color-hover); /* C'est votre bordure */
+    outline-offset: calc(0.5 * var(--vps)); /* C'est la distance entre l'élément et la bordure */
+    box-shadow: none;
+    margin: 0; 
+
+}
+
+.minefield-cell.revealed:hover {
+    background-color: var(--bg-color); /* Couleur de fond légèrement plus foncée lors du survol */
+}
+
 
 #status-bar {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    padding: 10px 0;
-    border-bottom: 2px solid var(--border-color);
-    margin-bottom: 10px;
+    box-shadow: 
+    calc(-0.5 * var(--vps)) calc(-0.5 * var(--vps)) 0 calc(0.5 * var(--vps)) var(--highlight),
+    calc(0.5 * var(--vps)) calc(0.5 * var(--vps)) 0 calc(0.5 * var(--vps)) var(--shadow),
+    0 0 0 calc(1 * var(--vps)) var(--bg-color),
+    calc(-0.5 * var(--vps)) calc(-0.5 * var(--vps)) 0 calc(0.5 * var(--vps)) var(--highlight) inset,
+    calc(0.5 * var(--vps)) calc(0.5 * var(--vps)) 0 calc(0.5 * var(--vps)) var(--shadow) inset;
+    height: calc(14 * var(--vps));
+    margin: var(--vps) var(--vps) var(--vps) var(--vps);
+    display: grid;
+    grid-template-columns: auto 1fr auto; /* bouton, minuteur, compteur */
+    align-items: center;
 }
 
-#timer, #mine-count, #game-message {
-    font-size: 30px;
+#timer {
+    font-size: var(--font-size-large);
+    color: var(--text-color);
+    width: calc(30 * var(--vps)); /* Largeur fixe, ajustez selon vos besoins */
+    text-align: center; /* Pour centrer le texte à l'intérieur */
+    box-shadow: 
+    calc(-0.5 * var(--vps)) calc(-0.5 * var(--vps)) 0 calc(0.5 * var(--vps)) var(--highlight),
+    calc(0.5 * var(--vps)) calc(0.5 * var(--vps)) 0 calc(0.5 * var(--vps)) var(--shadow),
+    0 0 0 calc(1 * var(--vps)) var(--bg-color); 
+    padding: calc(1 * var(--vps));
+    justify-self: center;
 }
+
+#mine-count {
+    display: flex;
+    font-size: var(--font-size-large);
+    color: var(--red2);
+    width: calc(10 * var(--vps)); 
+    height: calc(10 * var(--vps)); 
+    justify-content: center;
+    align-items: center;
+    box-shadow: 
+    calc(-0.5 * var(--vps)) calc(-0.5 * var(--vps)) 0 calc(0.5 * var(--vps)) var(--highlight),
+    calc(0.5 * var(--vps)) calc(0.5 * var(--vps)) 0 calc(0.5 * var(--vps)) var(--shadow),
+    0 0 0 calc(1 * var(--vps)) var(--bg-color); 
+    margin-right: calc(3 * var(--vps));
+}
+
+
+
+
+#reset-button {
+    background-color: var(--bg-color); /* ou toute autre couleur de fond */
+    border: none;
+    cursor: pointer;
+    width: calc(10 * var(--vps)); 
+    height: calc(10 * var(--vps)); 
+    box-shadow: 
+        calc(-0.5 * var(--vps)) calc(-0.5 * var(--vps)) 0 calc(0.5 * var(--vps)) var(--highlight),
+        calc(0.5 * var(--vps)) calc(0.5 * var(--vps)) 0 calc(0.5 * var(--vps)) var(--shadow);
+    margin-left: calc(3 * var(--vps)); /* pour une petite marge entre le bouton et le timer */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all .1s ease-in-out;
+}
+
+#reset-button img {
+    width: 90%; 
+    height: auto;
+    image-rendering: optimizeSpeed;
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neighbor;
+    transition: all .1s ease-in-out;
+}
+
+#reset-button:active img {
+    width: 80%; 
+    height: auto;
+    image-rendering: optimizeSpeed;
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neighbor;
+}
+
+#reset-button:hover {
+    background-color: var(--bg-color-hover);
+}
+
+#reset-button:active {
+    box-shadow: none;
+}
+
+
 
 #flagged {
     display: flex;
 }
 
 .minefield-cell.flagged {
-    background-image: url('flag.svg');
+    background-image: url('./KaboomCraze/Flag.png');
     background-size: cover;
+    image-rendering: optimizeSpeed;
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neighbor;
+}
+
+.minefield-cell.bombed {
+    background-image: url('./KaboomCraze/Mine.png'); 
+    background-size: cover;
+    background-color: var(--red2); 
+    image-rendering: optimizeSpeed;
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neighbor;
 }
 
 .modal {
@@ -72,17 +181,21 @@
 .modal-content {
     background-color: var(--bg-color);
     color: var(--text-color);
+    box-shadow: 
+    calc(-0.5 * var(--vps)) calc(-0.5 * var(--vps)) 0 calc(0.5 * var(--vps)) var(--highlight),
+    calc(0.5 * var(--vps)) calc(0.5 * var(--vps)) 0 calc(0.5 * var(--vps)) var(--shadow),
+    0 0 0 calc(1 * var(--vps)) var(--bg-color);
     padding: 30px;
-    border: 2px solid var(--border-color);
     max-width: 560px;
     width: fit-content;
     font-family: 'VT323', monospace;
     text-align: center;
-    font-size: 30px;
+    font-size: var(--font-size-large);
     overflow-y: auto;
     display: flex;
     justify-content: space-between;
 }
+
 
 #left-side {
     display: flex;
@@ -99,32 +212,50 @@
 
 #right-side h2 {
     text-align: center;
+    font-size: var(--font-size-large);
+    font-weight: normal;
 }
 
 
 
-#restart-button {
-    border: 1px solid var(--border-color-int);
+#restart-button, #submit-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: var(--text-color);
-    background-color: var(--bg-color);
-    padding: 10px 20px;
-    margin-top: 20px;
+    box-shadow: 
+    calc(-0.5 * var(--vps)) calc(-0.5 * var(--vps)) 0 calc(0.5 * var(--vps)) var(--highlight),
+    calc(0.5 * var(--vps)) calc(0.5 * var(--vps)) 0 calc(0.5 * var(--vps)) var(--shadow),
+    0 0 0 calc(1 * var(--vps)) var(--bg-color); 
+    text-align: center;
+    font-size: var(--font-size-large);
     cursor: pointer;
-    font-family: 'VT323', monospace;
-    font-size: 30px;
+    background-color: var(--bg-color);
+    transition: all .1s ease-in-out;
     cursor: none;
-    transition: background-color 0.3s ease;
+    margin: var(--vps);
+    height: calc(12 * var(--vps));
+    width: calc(25 * var(--vps));
+    font-family: 'VT323', monospace;
+    border: none;
 }
 
-#restart-button:hover {
+
+#restart-button:hover, #submit-button:hover {
     background-color: var(--bg-color-hover);
+    cursor: none;
 }
+
+#restart-button:active, #submit-button:active {
+    box-shadow: none;
+    cursor: none;
+}
+
 
 #player-name-input {
     background-color: var(--bg-color);
     color: var(--text-color);
-    border: 1px solid var(--border-color);
-    font-size: 30px;
+    font-size: var(--font-size-large);
     font-family: 'VT323', monospace;
     margin-top: 10px;
 }
@@ -133,20 +264,6 @@
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
-}
-
-#submit-button {
-    /* Reprend les mêmes styles que #restart-button */
-    border: 1px solid var(--border-color-int);
-    color: var(--text-color);
-    background-color: var(--bg-color);
-    padding: 10px 20px;
-    margin-top: 20px;
-    cursor: none;
-    font-family: 'VT323', monospace;
-    font-size: 30px;
-    cursor: none;
-    transition: background-color 0.3s ease;
 }
 
 #submit-button:hover {
@@ -170,15 +287,15 @@
 }
 
 #leaderboard-list::-webkit-scrollbar {
-    width: 10px; /* Largeur de la barre de défilement */
+    width: 10px; 
 }
 
 #leaderboard-list::-webkit-scrollbar-thumb {
-    background: var(--scrollbar-thumb-color); /* Couleur de la barre de défilement */
+    background: var(--scrollbar-thumb-color); 
 }
 
 #leaderboard-list::-webkit-scrollbar-track {
-    background: var(--scrollbar-track-color); /* Couleur de la piste de défilement */
+    background: var(--scrollbar-track-color); 
 }
 
 #left-side p, #left-side #restart-button {
@@ -186,7 +303,7 @@
 }
 
 #leaderboard-list .highlight {
-    background-color: rgb(110, 110, 110); /* Choose a color that fits your design */
+    background-color: rgb(110, 110, 110); 
 }
 
 #submit-button:disabled {
