--- a/kaboomcraze.css
+++ b/kaboomcraze.css
@@ -7,7 +7,7 @@
     width: fit-content;
     height: fit-content;
     box-sizing: border-box;
-    overflow: auto; /* Ajouté pour permettre le défilement si nécessaire */
+    overflow: auto;
 }
 
 #minefield {
@@ -34,8 +34,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: calc(5 * var(--vps));
-    height: calc(5 * var(--vps));
+    width: calc(7 * var(--vps));
+    height: calc(7 * var(--vps));
 
 }
 
@@ -58,7 +58,7 @@
 
 #status-bar {
     box-shadow: var(--contour-in);
-    height: calc(14 * var(--vps));
+    height: calc(18 * var(--vps));
     margin: var(--vps) var(--vps) var(--vps) var(--vps);
     display: grid;
     grid-template-columns: auto 1fr auto; 
@@ -68,7 +68,7 @@
 #timer {
     font-size: var(--font-size-large);
     color: var(--text-color);
-    width: calc(30 * var(--vps)); 
+    width: calc(34 * var(--vps)); 
     text-align: center; 
     box-shadow: var(--contour-out);
     padding: calc(1 * var(--vps));
@@ -79,8 +79,8 @@
     display: flex;
     font-size: var(--font-size-large);
     color: var(--red2);
-    width: calc(10 * var(--vps)); 
-    height: calc(10 * var(--vps)); 
+    width: calc(14 * var(--vps)); 
+    height: calc(14 * var(--vps)); 
     justify-content: center;
     align-items: center;
     box-shadow: var(--contour-out);
@@ -94,8 +94,8 @@
     background-color: var(--bg-color);
     border: none;
     cursor: pointer;
-    width: calc(10 * var(--vps)); 
-    height: calc(10 * var(--vps)); 
+    width: calc(14 * var(--vps)); 
+    height: calc(14 * var(--vps)); 
     box-shadow: var(--contour-out);
     margin-left: calc(3 * var(--vps));
     display: flex;
@@ -105,7 +105,7 @@
 }
 
 #reset-button img {
-    width: 90%; 
+    width: 70%; 
     height: auto;
     image-rendering: optimizeSpeed;
     image-rendering: pixelated;
