--- a/windowsmanager.css
+++ b/windowsmanager.css
@@ -257,7 +257,7 @@
 
 .window.maximized {
     width: 100%;
-    height: 100%;
+    height: calc(100vh - 20 * var(--vps));
     top: 0;
     left: 0;
 }
